@@ -1,5 +1,6 @@
 
-
+- Fixed Common.__ASSERT methods to act correctly if parameter is '0' or 'false' 
+- Removed unnecessary Common.__ASSERT calls if NPE would trivially be thrown by code below 
 - Fixed mode checking in dJointSetTransmissionAxis2()
 - Test and fix for issue #31  (NPE in ragdoll)
 - Added support for heightfiels with holes (DxTrimeshHeightField)
